avfilter/vf_framerate: always request input if no output is provided in request_frame

Fixes ticket #6285.

Signed-off-by: Marton Balint <cus@passwd.hu>